2015, June	Fly-Man- <fly.man.opensim@gmail.com>
	* V2.0.7	(WhiteCore Build)
	* Added the VS2012/VS2013 targets so .Net 4.5 can be used for WhiteCore
	* Cleaned up the SharpDevelop2 code part
	
2015, April  rowan Deppeler <greythane@gmail.com>
	* V2.0.6w	(WhiteCore build
	* No changes to the code as it appears development has now stalled at 1.10
	- Incorporated (Rev's, I think) patches from Aurora to provide for passing the framework
	 and additional conditionals in the Prebuild.xml spec
	- Re-built using Net 4.0 framework to provide for use on unmodified Windows 8 systems (No Net 3.5) 
	- Included Solution and project files to assist building if required 


2008-12-09T02:15	D. Moonfire <d.moonfire@mfgames.com>
	* src/Core/Kernel.cs
	- Added a /ppi target to get the results of processing but before
	processing the actual results.
	* src/Core/Preprocessor.cs
	- Applied the patch from kanato with formatting changes.
	- Uses the <?include file="" ?> format.
	* tests/
	- Added some lightweight tests to test the functionality of the
	include patch.
	
2008-06-19T09:37	John Anderson <sontek@gmail.com>
	* src/Core/Kernel.cs
	- Only Loop through targets that are not abstract.
	* src/Core/Targets/VSGenericTarget.cs
	- Marked abstract and removed the Target attribute.

2008-06-16T17:37	John Anderson <sontek@gmail.com>
	* src/Core/Nodes/ProjectNode.cs,data/prebuild-1.7.xsd
	- Added the ability to hardcode guid's in the projects 

2008-05-21T0737		C.J. Adams-Collier <cjac@colliertech.org>
	* src/Core/Targets/AutotoolsTarget.cs
	- catch exception when unable to compile AssemblyInfo.cs

2008-05-07T17:29	John Anderson <sontek@gmail.com>
	* src/Core/Targets/VSGenericTarget.cs
	  - Generate asp.net output in bin\ folder (asp.net requires it there)

2008-04-30T17:29	John Anderson <sontek@gmail.com>
	* src/Core/Nodes/DatabaseReferenceNode.cs,
	  src/Core/Nodes/Datanode.cs,
	  src/Core/Nodes/FileNode.cs,
	  src/Core/Nodes/FileNodes.cs,
	  src/Core/Nodes/MatchNode.cs,